<resources>
    <string name="app_name">PryectoJava</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MaxSecurity</string>
    <string name="play">Run</string>
    <string name="opciones">Options</string>
    <string name="salir">Exit</string>
    <string name="ejemplo">ricardo maya</string>
    <string name="mail_label">Mail:</string>
    <string name="password_label">Password:</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="sound">Sound:</string>
</resources>