<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo"
    >
    <TextView
        android:id="@+id/title_label"
        android:text="DEFAULT CONFIGURATIONS"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:textStyle="bold|italic"
        android:textSize="20dp"
        android:gravity="center"
        android:width="100dp"
        android:textColor="#FFFFFF">
    </TextView>
    
    
    <TextView
        android:id="@+id/mail_label"
        android:text="@string/mail_label"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/title_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15dp"
        android:gravity="center"
        android:width="100dp"
        android:textColor="#FFFFFF">
    </TextView>

    <EditText
        android:id="@+id/mail_text"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_below="@+id/title_label"
        android:layout_toRightOf="@+id/mail_label"
        android:enabled="false" >
     </EditText>
     
    <TextView
        android:id="@+id/password_label"
        android:text="@string/password_label"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/mail_text"
        android:textSize="15dp"
        android:gravity="center"
        android:width="100dp"
        android:textColor="#FFFFFF">
    </TextView>
    
    <EditText
        android:id="@+id/password_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/mail_text"
        android:layout_toRightOf="@+id/password_label"
        android:gravity="center"
        android:inputType="textPassword"
        android:enabled="false" >
     </EditText>
     
    <TextView
        android:id="@+id/sound_label"
        android:text="@string/sound"
        android:textSize="15dp"
        android:gravity="center"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password_text"
        android:textColor="#FFFFFF">"
        
    </TextView>
    
    <Spinner
        android:id="@+id/sound_sppiner"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_below="@+id/password_text"
        android:layout_toRightOf="@+id/password_label"
        >
     </Spinner>
     
     <TextView
        android:id="@+id/label_espacio"
        android:text=""
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:gravity="center"
        android:width="100dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/sound_label">
    </TextView>
    
     <TextView
        android:id="@+id/subtitle_label"
        android:text="STATE APLICATION"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:textStyle="bold|italic"
        android:textSize="20dp"
        android:gravity="center"
        android:width="100dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/label_espacio">
    </TextView>
    
     <ToggleButton
         android:id="@+id/turn_on"
         android:textOn="@string/turn_off"
         android:textOff="@string/turn_on"
         android:layout_below="@+id/subtitle_label"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:gravity="center"
         android:layout_centerHorizontal="true"
         android:textSize="20dp">
         
     </ToggleButton>
    
    

</RelativeLayout>