<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dip"
        android:layout_marginTop="10dip"
        android:src="@drawable/fondo3" >
    </ImageView>

    <Button
        android:id="@+id/play_button"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dip"
        android:background="@drawable/colorbutton"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/play"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" >
    </Button>

    <Button
        android:id="@+id/options_button"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dip"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/opciones"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:background="@drawable/colorbutton" >
    </Button>

    <Button
        android:id="@+id/exit_button"
         android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dip"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/salir"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" 
        android:background="@drawable/colorbutton">
    </Button>

    <ImageSwitcher
        android:id="@+id/imageSwitcher1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </ImageSwitcher>

</LinearLayout>
